writing out method and type call graphs